# PS3EYEDriver

opencv/: CMakeLists.txt  FindUSB1.cmake  main.cpp
sdl/: main.cpp
src/: ps3eye.cpp  ps3eye.h  ps3eye_capi.cpp  ps3eye_capi.h  ps3eyedriver.cpp  ps3eyedriver.h
